# cipher_pillay_kayal

Class_Package/: pyproject.toml
Class_Package/cipher_mmp2227_redo/: CONTRIBUTORS.txt  LICENSE  README.md  manage.py  setup.cfg
Class_Package/cipher_mmp2227_redo/cipher_mmp2227_redo/: cipher_mmp2227.py  conftest.py
Class_Package/cipher_mmp2227_redo/cipher_mmp2227_redo/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
Class_Package/cipher_mmp2227_redo/cipher_mmp2227_redo/templates/: base.html
Class_Package/cipher_mmp2227_redo/cipher_mmp2227_redo/users/: admin.py  apps.py  models.py  urls.py  views.py
Class_Package/cipher_mmp2227_redo/cipher_mmp2227_redo/users/migrations/: 0001_initial.py
Class_Package/cipher_mmp2227_redo/cipher_mmp2227_redo/users/tests/: test_admin.py  test_forms.py  test_models.py  test_urls.py  test_views.py
Class_Package/cipher_mmp2227_redo/config/: urls.py  wsgi.py
Class_Package/cipher_mmp2227_redo/config/settings/: base.py  local.py  production.py  test.py
Class_Package/cipher_mmp2227_redo/docs/: Makefile  conf.py  howto.rst  index.rst  make.bat  users.rst
Class_Package/cipher_mmp2227_redo/requirements/: base.txt  local.txt  production.txt
Class_Package/cipher_mmp2227_redo/test/: cipher_test.py
