[tool.poetry]
name = "in-class-package"
version = "0.1.0"
description = "Python package in class today on 26 Oct 2022"
authors = ["Kayal Pillay <kayal.pillay@law.columbia.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "in_class_package"}]

[tool.poetry.dependencies]
python = "3.10.6"
cookiecutter = "^2.1.1"
Sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.0"
myst-nb = "^0.17.1"
pytest = "^7.2.0"


[tool.poetry.group.dev.dependencies]
myst-nb = "^0.17.1"
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.1.0"
Sphinx = "^5.3.0"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
 ...
 readme = "README.md"
 documentation = 'https://qmsspkg.readthedocs.io'
 homepage = "https://github.com/kayalpillay/cipher_pillay_kayal"
 repository = "https://github.com/kayalpillay/cipher_pillay_kayal"